# Cute_Six_ROS_Balance

./: README.md
balance/: CMakeLists.txt  package.xml
balance/msg/: Num.msg  carOdom.msg
balance/src/: arduino.cpp  balance.cpp  cmd_vel_listener.py  heart_rate.py  link2blance.py  odom_pub.cpp
beginner_tutorials/: CMakeLists.txt  package.xml
cutesix_2dnav/: CMakeLists.txt  package.xml
cutesix_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params.yaml~
cutesix_2dnav/launch/: cutesix_config.launch  cutesix_voice.launch  cutesix_voice.launch~  move_base.launch  move_base.launch~  start.launch
cutesix_2dnav/map/: map.yaml  map.yaml~  map_temp.yaml  map_temp.yaml~
cutesix_2dnav/src/: fix_tf_boradcaster.py  fix_tf_boradcaster.py~
github.com/refs/heads/: master
xf_voice/: CMakeLists.txt  package.xml
xf_voice/src/: explain.py  wakeup.cpp  xf_asr.cpp  xf_tts.cpp
